--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href='https://github.com/firetools/blenderfds28x/wiki' target="_blank" class='btn'>Learn</a>
             <a href='http://groups.google.com/group/blenderfds' target="_blank" class='btn'>Discuss</a>
             <a href='https://github.com/firetools/blenderfds28x/issues' target="_blank" class='btn'>Issues</a>
-            <a href='https://cfd-fea-service.github.io/blenderfds28x/docs/html/index.html' target="_blank" class='btn'>Docs</a>
+            <a href='https://firetools.github.io/blenderfds28x/docs/html/index.html' target="_blank" class='btn'>Docs</a>
         </div>
     <p><presentation>Welcome to BlenderFDS, the open source graphical interface and pre-processor
     for <a href="https://pages.nist.gov/fds-smv/" target="_blank">Fire Dynamics Simulator (FDS)</a>,
